# foundry-memory

./: .env.example  .pre-commit-config.yaml  README.md  Taskfile.yml  blog.md  pyproject.toml  requirements.dev.txt  requirements.txt  streamlit_app.py
foundry_memory/services/: azure_open_ai_chat_client_service.py  foundry_memory_store.py  mistral_chat_client_service.py
tests/foundry_memory/services/: test_azure_open_ai_chat_client_service.py  test_foundry_memory_store.py  test_mistral_chat_client_service.py
